Fixed bug #33156 (cygwin version of setitimer doesn't accept ITIMER_PROF). (Nuno)